# fmp-rs

./: .gitignore  .pdm-python  Cargo.toml  README.md  deploy.sh  pyproject.toml
script/: bnh_plot.py  ma_plot.py  rebalance_plot.py  strategy_plot.py  ta_plot.py  trade_plot.py
src/: api.rs  lib.rs  main.rs  strategy.rs  ta.rs  trade.rs
src/grave/: hantoo_api_test.rs
