[package]
name = "fmp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
peroxide = { version = "0.34.1", features = ["parquet"] }
reqwest = { version = "0.11.22", features = ["json", "blocking"] }
serde = { version = "1.0.188", features = ["serde_derive"] }
serde_json = "1.0.107"
time = { version = "0.3.29", features = ["macros", "parsing"] }
tokio = { version = "1.33.0", features = ["full"] }
tokio-test = "0.4.3"
yahoo_finance_api = { version = "2.1.0", features = ["blocking"] }
